# Private-chef-agent

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/agents/: personal_chief.py
app/api/v1/: chat.py  recipes.py  settings.py  skills.py
app/db/: personal_chief.db-shm  recipes_db.py
app/models/: schemas.py
app/rag/: recipes_seed.py  vector_store.py
app/skills/: __init__.py  ingredient_substitutor.py  meal_planner.py  nutrition_analyzer.py  registry.py  shopping_list.py
app/static/: index.html
app/static/admin/: recipes.html
