[project]
name = "app-test"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "alibabacloud-oss-v2>=1.3.0",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "langchain>=1.3.1",
    "langchain-openai>=1.2.1",
    "langchain-tavily>=0.2.18",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "uvicorn>=0.47.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
